Document Streamlit sunset plan updates

--- a/docs/release_notes/v0.1.0a1.md
+++ b/docs/release_notes/v0.1.0a1.md
@@ -34,6 +34,13 @@
    git push origin v0.1.0a1
    ```
 
+## Documentation updates
+
+- Highlight the latest changes in the [Streamlit to PySide6 migration
+  guide](../guides/streamlit-to-pyside6.md) and call out new sunset timings.
+- Link to the [Streamlit refactor plan](../specs/streamlit-refactor-plan.md) in
+  the release blog or announcement summary.
+
 ## Known gaps
 
 - Integration tests are skipped.
